<resources>
    <string name="app_name">CarPooling</string>
    <string name="trackingNonCompletato">Tracking not completed!</string>
    <string name="trackingNonCompletatoText">Tracking not yet completed. The bidder must have completed the tracking.</string>
    <string name="trackingRichiedenteText">You can close this screen when you have arrived at your destination. After which the points will be validated.</string>
    <string name="trackingInCorso">Tracking in progress</string>
    <string name="startTracking">Start tracking</string>
    <string name="trackingVuoto">Tracking can not be started. If you have OFFERED THE PASSAGE, you can start it 10 minutes before the scheduled time and after 30 minutes. If you have REQUIRED THE PASSAGE you have to wait for the bidder to have the tracking.</string>
    <string name="personeDaPrendereText">People you must pass to take</string>
    <string name="riceviTrackingText">When you enter the car, press START TRACKING to synchronize your device with that of the bidder. It is
           necessary to authorize the bluetooth connection!</string>
    <string name="datiRiepilogo">Bidder data summary</string>
    <string name="avviaTrackingText">You can START TRACKING 10 minutes before the indicated time, up to a maximum of 30 minutes. It is necessary to activate the bluetooth in order to start it.</string>
    <string name="loginString">Sign in or sign up</string>
    <string name="NonHaiUnAccount">Do not have an account? Sign in</string>
    <string name="Registrazione">Register</string>
    <string name="passwordCorta">The password must contain between 5 and 16 characters</string>
    <string name="formatoEmailNonValido">Invalid email format</string>
    <string name="NomeCittadino">Name</string>
    <string name="CognomeCittadino">Surname</string>
    <string name="CodiceFiscaleCittadino">Fiscal Code</string>
    <string name="completaRegistrazioneText">Enter email and password to complete registration</string>
    <string name="passwordErrata">Wrong password</string>
    <string name="passwordErrataText">Passwords do not match</string>
    <!--<string name="EmailCittadino">Email</string>
    <string name="PasswordCittadino">Password</string> -->
    <string name="Avanti">Next</string>
    <string name="ListaUtenti">Utent List</string>
    <string name="Email"> E-mail</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign in</string>
    <string name="SignUp">Sign up</string>
    <string name="ImieiPassaggi">My ride</string>
    <string name="ClassificaAzienadale">Company Ranking</string>
    <string name="ClassificaNazionale">National Ranking</string>
    <string name="BottoneOfferti">Offered</string>
    <string name="BottoneRichiesti">Required</string>
    <string name="IlMioProfilo">My profile</string>
    <string name="DettagliUtente">Details User Profile</string>
    <string name="Nome">Name</string>
    <string name="Cognome">Surname</string>
    <string name="Indirizzo">Address</string>
    <string name="VisualizzaClassifica">Graduation</string>
    <string name="Logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ImpostaData">Date</string>
    <string name="ImpostaOra">Time</string>
    <string name="Azienda">Company</string>
    <string name="Auto">Car</string>
    <string name="NumeroTelefonico">Phone Number</string>
    <string name="numeroTelefonoNonValido">Invalid telephone number</string>
    <string name="numeroTelefonoNonValidoText">The telephone number consists of 10 digits</string>
    <string name="aziendaNonValida"> Invalid company </string>
    <string name="aziendaNonValidaText">The company you entered does not exist</string>
    <string name="PostiDisponibili">Places available</string>
    <string name="Domanda">Do you want to save this default choice for each week?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>
    <string name="ConfermaIndirizzo">Confirm address</string>
    <string name="AccessoNonAutorizzatoTitolo">Access not performed </string>
    <string name="AccessoNonAutorizzatoTesto"> You have not yet been authorized by your company</string>
    <string name="Conferma">Confirm</string>
    <string name="PasswordDimenticata">Did you forget your password? </string>
    <string name="Home">Home</string>
    <string name="PasswordDimenticataTesto">
Enter the email address with which you registered. We will send you a link to reset your password.</string>
    <string name="emailInviataSuccesso">Email address successfully</string>
    <string name="emailInesistente">Invalid email!</string>
    <string name="emailInesistenteTesto">There is no account registered with the following e-mail.</string>
    <string name="inserisciNuovaPassword">
Enter the new one you will use to access CarPooling.</string>
    <string name="emailInviataSuccessoTesto">Select the link received in your email to reset your password.</string>
    <string name="confermaPassword">Confirm password</string>
    <string name="inserisciInfoPersonali">
Enter your information to proceed with registration.</string>
    <string name="Residenza">Residence</string>
    <string-array name="names">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>Altro</item>
    </string-array>
    <string name="dettagliutente">Detail user profile</string>
    <string name="title_activity_modifica_residenza">Change residence</string>
    <string name="codicefiscale">FISCAL CODE</string>
    <string name="residenza">RESIDENCE</string>
    <string name="viaggio">Trip</string>
    <string name="data_e_ora">Date &amp; hour</string>
    <string name="automobilista">Driver</string>
    <string name="Telefono">Number phone</string>
    <string name="Stato">Status</string>
    <string name="TitoloAggiornamentoConfermato">Update confirmed</string>
    <string name="TestoAggiornamentoConfermato">Your profile is updated</string>
    <string name="PassaggioOffertoConfermatoTitolo">Passage confirmed</string>
    <string name="PassaggioOffertoConfermatoTesto">Your passage has been successfully offered </string>
    <string name="ErrorePassaggioOffertoPresenteTesto">you have already offered or requested a ride on this date and within the next three hours or so. </string>


    <string name="casa_lavoro">Home-Work</string>
    <string name="lavoro_casa">Work-Home</string>

    <string name="la_tua_casa">Home</string>
    <string name="lavoro">Work</string>

    <string name="ErrorePassaggioRichiestoPresenteTitolo">Error insert</string>
    <string name="ErrorePassaggioRichiestoPresenteTesto">You have already offered or requested a ride on this date and within the next three hours or so.</string>

    <string name="Prenotazione_passaggio">Click to occupy</string>
    <string name="OfferteNonPresenti">There are no offers</string>
    <string name="VecchiaPass">Enter the old password</string>
    <string name="NuovaPass">Enter the new password</string>
    <string name="ConfermaPass">Confirm the new password</string>
    <string name="SelezionaData">Select the date</string>
    <string name="SelezionaOra">Select the time</string>
    <string name="Ricerca">Search</string>
    <string name="AccettaUtente">Accept</string>
    <string name="RifiutaUtente">Refuse</string>
    <string name="PassaggioPrenotatoTitolo">Request sent</string>
    <string name="PassaggioPrenotatoTesto">Your request has been sent to the bidder. Wait for his answer.</string>
    <string name="accetta">Accept</string>
    <string name="rifiuta">Refuse</string>
    <string name="Tracking">Tracking</string>

    <string name="Accetato">Accepted</string>
    <string name="Rifiutato">Refused</string>
    <string name="Sospeso">Suspended</string>

    <string name="PostiOccupatiTitolo">Places occupied</string>
    <string name="PostiOccupatiTesto">All  places are occupied</string>
    <string name="PassaggioRifiutatoTitolo">Request rejected</string>
    <string name="PassaggioRifiutatoTesto">Your request has been rejected. Are you sure you want to delete this step from your list?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="TrovaPassaggio">Find passage</string>
    <string name="OffriPassaggio">Offer passage</string>
    <string name="Citazione">"We spend a third of our life in traffic and a third to look for parking!"</string>

    <string name="TestoConfermaPasswordErrore">Mismatched passwords</string>
    <string name="erroreVecchiaPAssword">Wrong password</string>
    <string name="listaUtenti">User List</string>
    <string name="LogoutTitolo">Logout</string>
    <string name="LogoutTesto">Do you want to exit?</string>

    <string name="AttesaConvalidazione">Waiting for authorizathion</string>
    <string name="Autorizzato">Authorized</string>
    <string name="utenteAccettatoTitolo">User accepted</string>
    <string name="utenteAccettatoTesto">User successfully accepted</string>
    <string name="utenteRifiutatoTitolo">User rejected</string>
    <string name="utenteRifiutatoTesto">User successfully rejected</string>
    
    <string name="PassaggioAccettatoSuccessoTitolo">Request accepted</string>
    <string name="PassaggioAccettatoSuccessoTesto">You have successfully accepted the request.</string>
    <string name="PassaggioRifiutatoSuccessoTitolo">Request rejected</string>
    <string name="PassaggioRifiutatoSuccessoTesto">You have successfully rejected the request.</string>
    <string name="sede">Place of work</string>
    <string name="Contatti">Contacts</string>
    <string name="Informazioni">Information</string>
    <string name="Impostazioni">Setting</string>
    <string name="sedeNonValida"> Invalid place of work </string>
    <string name="sedeNonValidaText">The place of work you entered does not exist</string>
    <string name="registrazioneCompletaTitolo">Registration completed</string>
    <string name="registrazioneCompletaTesto">Registration was successful. Wait to be validated by the mobility manager</string>
    <string name="erroreEmailEsistente">Existing email or phone.</string>
    <string name="erroreEmailEsistenteTitolo">Error insert</string>

    <string name="loginErratoTitolo">Error access</string>
    <string name="loginErratoTesto">Wrong email or password.</string>
    
    <string name="AccessoRifiutatoTitolo">Access refused.</string>
    <string name="AccessorifiutatoTesto">You have been rejected by the company.</string>
    <string name="CampoObbligatorio">Required field</string>

    <string name="occupati">Occupied</string>
    <string name="completato">Completed</string>
    <string name="finito">Finish</string>

    <string name="posizioneClassifica">Position</string>
    <string name="Dipendente">Worker</string>
    <string name="punteggio">Score</string>
    <string name="azienda">Company</string>
    <string name="Accedi">Access</string>
    <string name="assente">Not present</string>
    <string name="avvia">Starts</string>
    <string name="successoTracking">Success!</string>
    <string name="successoTrackingTest">Successful tracking</string>
0
    <string name="cancellaPassaggioCompletatoTitolo">Ride completed</string>
    <string name="cancellaPassaggioCompletatoTesto">This ride has been completed. Do you want delete this ride from your list?</string>

    <string name="ConnectionRequired">Connection required</string>
    <string name="ConnectionRequiredText">You need an Internet connection to use the app</string>
</resources>
