<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/Home"
        android:title="@string/Home"
        android:icon="@drawable/home"/>


    <item android:id="@+id/IlMioProfilo"
        android:title="@string/IlMioProfilo"
        android:icon="@drawable/profilo">

    </item>
    <item android:id="@+id/imieipassaggi"
        android:title="@string/ImieiPassaggi"
        android:icon="@drawable/i_miei_passaggi">

    </item>
    <item android:id="@+id/Classifica"
        android:title="@string/VisualizzaClassifica"
        android:icon="@drawable/classifica">

    </item>

    <item android:id="@+id/Tracking"
        android:title="@string/VisualizzaClassifica"
        android:icon="@drawable/tracking">

    </item>


</menu>