<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrazioneCittadino">

    <EditText
        android:id="@+id/NomeCittadino"
        android:layout_width="379dp"
        android:layout_height="47dp"
        android:layout_marginBottom="448dp"
        android:editable="true"
        android:hint="@string/NomeCittadino"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/CognomeCittadino"
        android:layout_width="380dp"
        android:layout_height="47dp"
        android:layout_marginBottom="360dp"
        android:editable="true"
        android:hint="@string/CognomeCittadino"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAvanti"
        android:onClick="editTextRegistrazione"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_marginBottom="260dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/Avanti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>