<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tint_color">


    <LinearLayout
        android:id="@+id/driverText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/automobilista" />

        <TextView
            android:id="@+id/textDriver"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/residenceText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/residenza" />

        <TextView
            android:id="@+id/textResidence"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cellText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/Telefono" />

        <TextView
            android:id="@+id/textCell"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/StatusText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/Stato" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

    </LinearLayout>


    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"></LinearLayout>

</LinearLayout>

